--- a/index.html
+++ b/index.html
@@ -87,19 +87,78 @@
           Name
           <input type="text" id="precise-name" maxlength="80" />
         </label>
-        <label>X
-          <input type="number" id="precise-x" step="1" />
-        </label>
-        <label>Y
-          <input type="number" id="precise-y" step="1" />
-        </label>
-        <label>Scale (%)
-          <input type="number" id="precise-scale" min="10" max="400" />
-        </label>
-        <label>Rotation (°)
-          <input type="number" id="precise-rotation" min="-180" max="180" />
-        </label>
-        <label id="color-label">Color
+
+        <div class="precision-control" id="rotation-control">
+          <label class="control-title" for="precise-rotation" id="angle-label">Angle</label>
+          <div class="control-row">
+            <input
+              type="range"
+              id="precise-rotation-slider"
+              min="0"
+              max="360"
+              step="1"
+              aria-labelledby="angle-label"
+            />
+            <div class="precision-number">
+              <input type="number" id="precise-rotation" min="0" max="360" step="1" inputmode="numeric" />
+              <span aria-hidden="true">°</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="precision-control" id="x-control">
+          <label class="control-title" for="precise-x" id="x-label">X Position</label>
+          <div class="control-row">
+            <input
+              type="range"
+              id="precise-x-slider"
+              min="-1000"
+              max="1000"
+              step="1"
+              aria-labelledby="x-label"
+            />
+            <div class="precision-number">
+              <input type="number" id="precise-x" min="-1000" max="1000" step="1" inputmode="numeric" />
+            </div>
+          </div>
+        </div>
+
+        <div class="precision-control" id="y-control">
+          <label class="control-title" for="precise-y" id="y-label">Y Position</label>
+          <div class="control-row">
+            <input
+              type="range"
+              id="precise-y-slider"
+              min="-1000"
+              max="1000"
+              step="1"
+              aria-labelledby="y-label"
+            />
+            <div class="precision-number">
+              <input type="number" id="precise-y" min="-1000" max="1000" step="1" inputmode="numeric" />
+            </div>
+          </div>
+        </div>
+
+        <div class="precision-control" id="scale-control">
+          <label class="control-title" for="precise-scale" id="scale-label">Scale</label>
+          <div class="control-row">
+            <input
+              type="range"
+              id="precise-scale-slider"
+              min="1"
+              max="1000"
+              step="1"
+              aria-labelledby="scale-label"
+            />
+            <div class="precision-number">
+              <input type="number" id="precise-scale" min="1" max="1000" step="1" inputmode="numeric" />
+              <span aria-hidden="true">%</span>
+            </div>
+          </div>
+        </div>
+
+        <label id="color-label" class="color-chip">Color
           <input type="color" id="precise-color" />
         </label>
         <label id="font-label">Font
