--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
         <div class="canvas-inner">
           <div class="canvas-stage">
             <div class="svg-container">
-              <svg id="svg-canvas" viewBox="0 0 1155 1155" role="presentation" aria-labelledby="canvas-title">
+              <svg
+                id="svg-canvas"
+                viewBox="0 0 1155 1155"
+                preserveAspectRatio="xMidYMid meet"
+                role="presentation"
+                aria-labelledby="canvas-title"
+              >
                 <title id="canvas-title">T-shirt design canvas</title>
                 <defs>
                   <filter id="selection-shadow" x="-20%" y="-20%" width="140%" height="140%">
