--- a/index.html
+++ b/index.html
@@ -162,6 +162,16 @@
     <div class="drawer-panel">
       <header class="drawer-head">
         <h2 id="drawer-title">Menu</h2>
+        <button
+          class="drawer-expand"
+          id="drawer-expand"
+          type="button"
+          aria-pressed="false"
+          aria-label="Expand drawer"
+          title="Expand drawer"
+        >
+          <span class="drawer-expand-icon" aria-hidden="true">⤢</span>
+        </button>
         <div class="drawer-controls">
           <button
             class="action-button drawer-primary-action"
