--- a/00_page_wip_v1/index.html
+++ b/00_page_wip_v1/index.html
@@ -23,7 +23,7 @@
           <div class="gallery-search" role="search">
             <div class="search-field" role="combobox" aria-haspopup="listbox" aria-expanded="false">
               <span class="search-icon" aria-hidden="true">🔍</span>
-              <input type="search" class="gallery-search-input" autocomplete="off" aria-autocomplete="list" aria-label="Search design templates" placeholder="Search designs by name or #tag" />
+              <input type="search" class="gallery-search-input" autocomplete="off" aria-autocomplete="list" aria-label="Search designs by tag or name" placeholder="Search by tag or name" />
             </div>
             <div class="gallery-suggestions" role="listbox" aria-label="Tag suggestions"></div>
           </div>
@@ -35,7 +35,7 @@
             </div>
           </div>
           <div class="gallery-tag-explorer">
-            <button class="gallery-tag-toggle" type="button" aria-expanded="false"><span class="toggle-label">See all tags</span><span class="toggle-caret" aria-hidden="true"></span></button>
+            <button class="gallery-tag-toggle" type="button" aria-expanded="false"><span class="toggle-label">See All tags</span><span class="toggle-caret" aria-hidden="true"></span></button>
             <div class="gallery-tag-strip" role="list" aria-label="Available tags" hidden></div>
           </div>
           <div class="gallery-grid" role="list"></div>
@@ -58,7 +58,7 @@
           <div class="gallery-search" role="search">
             <div class="search-field" role="combobox" aria-haspopup="listbox" aria-expanded="false">
               <span class="search-icon" aria-hidden="true">🔍</span>
-              <input type="search" class="gallery-search-input" autocomplete="off" aria-autocomplete="list" aria-label="Search design elements" placeholder="Search elements by name or #tag" />
+              <input type="search" class="gallery-search-input" autocomplete="off" aria-autocomplete="list" aria-label="Search elements by tag or name" placeholder="Search by tag or name" />
             </div>
             <div class="gallery-suggestions" role="listbox" aria-label="Tag suggestions"></div>
           </div>
@@ -70,7 +70,7 @@
             </div>
           </div>
           <div class="gallery-tag-explorer">
-            <button class="gallery-tag-toggle" type="button" aria-expanded="false"><span class="toggle-label">See all tags</span><span class="toggle-caret" aria-hidden="true"></span></button>
+            <button class="gallery-tag-toggle" type="button" aria-expanded="false"><span class="toggle-label">See All tags</span><span class="toggle-caret" aria-hidden="true"></span></button>
             <div class="gallery-tag-strip" role="list" aria-label="Available tags" hidden></div>
           </div>
           <div class="gallery-grid" role="list"></div>
@@ -93,7 +93,7 @@
           <div class="gallery-search" role="search">
             <div class="search-field" role="combobox" aria-haspopup="listbox" aria-expanded="false">
               <span class="search-icon" aria-hidden="true">🔍</span>
-              <input type="search" class="gallery-search-input" autocomplete="off" aria-autocomplete="list" aria-label="Search text presets" placeholder="Search text by name or #tag" />
+              <input type="search" class="gallery-search-input" autocomplete="off" aria-autocomplete="list" aria-label="Search text presets by tag or name" placeholder="Search by tag or name" />
             </div>
             <div class="gallery-suggestions" role="listbox" aria-label="Tag suggestions"></div>
           </div>
@@ -105,7 +105,7 @@
             </div>
           </div>
           <div class="gallery-tag-explorer">
-            <button class="gallery-tag-toggle" type="button" aria-expanded="false"><span class="toggle-label">See all tags</span><span class="toggle-caret" aria-hidden="true"></span></button>
+            <button class="gallery-tag-toggle" type="button" aria-expanded="false"><span class="toggle-label">See All tags</span><span class="toggle-caret" aria-hidden="true"></span></button>
             <div class="gallery-tag-strip" role="list" aria-label="Available tags" hidden></div>
           </div>
           <div class="gallery-grid" role="list"></div>
