--- a/00_page_wip_v1/index.html
+++ b/00_page_wip_v1/index.html
@@ -38,7 +38,9 @@
             <button class="gallery-tag-toggle" type="button" aria-expanded="false"><span class="toggle-label">See All tags</span><span class="toggle-caret" aria-hidden="true"></span></button>
             <div class="gallery-tag-strip" role="list" aria-label="Available tags" hidden></div>
           </div>
-          <div class="gallery-grid" role="list"></div>
+          <div class="gallery-results-shell">
+            <div class="gallery-grid" role="list"></div>
+          </div>
           <div class="gallery-pagination" aria-live="polite">
             <div class="pager-controls">
               <button class="pager-button gallery-prev" type="button" disabled>Previous</button>
@@ -73,7 +75,9 @@
             <button class="gallery-tag-toggle" type="button" aria-expanded="false"><span class="toggle-label">See All tags</span><span class="toggle-caret" aria-hidden="true"></span></button>
             <div class="gallery-tag-strip" role="list" aria-label="Available tags" hidden></div>
           </div>
-          <div class="gallery-grid" role="list"></div>
+          <div class="gallery-results-shell">
+            <div class="gallery-grid" role="list"></div>
+          </div>
           <div class="gallery-pagination" aria-live="polite">
             <div class="pager-controls">
               <button class="pager-button gallery-prev" type="button" disabled>Previous</button>
@@ -108,7 +112,9 @@
             <button class="gallery-tag-toggle" type="button" aria-expanded="false"><span class="toggle-label">See All tags</span><span class="toggle-caret" aria-hidden="true"></span></button>
             <div class="gallery-tag-strip" role="list" aria-label="Available tags" hidden></div>
           </div>
-          <div class="gallery-grid" role="list"></div>
+          <div class="gallery-results-shell">
+            <div class="gallery-grid" role="list"></div>
+          </div>
           <div class="gallery-pagination" aria-live="polite">
             <div class="pager-controls">
               <button class="pager-button gallery-prev" type="button" disabled>Previous</button>
